1 - Side-Bar - com recuo e rotas para outros componentes/ conteudo aparecendo dentro, porém com erros ao previnir no login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 
-<router-outlet />
+        <app-side-bar >             
+        </app-side-bar>
+        <router-outlet ></router-outlet>
+      
+       
+  
+      
