Criação do componente cadastro paciente (patient-registration) criação do objeto com cados do paciente e do endereço. Vinculação dos objetos com o respectivo form do template Criação básica do template html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-
+<!-- 
         <app-side-bar >             
-        </app-side-bar>
+        </app-side-bar> -->
         <router-outlet ></router-outlet>
       
        
