--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -8,7 +8,7 @@
           <a mat-list-item routerLink="/handbooks">
               <i class="material-icons">person_search</i>Prontuários
           </a>
-          <a mat-list-item routerLink="/patients">
+          <a mat-list-item routerLink="/patient-registration">
             <i class="material-icons">person_add</i>Cadastro de Pacientes
         </a>
         <a mat-list-item routerLink="/appointment">
