--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
                     <input  type="email" name="email" placeholder="Ex. pat@example.com"  formControlName="email" required="">
                     <input type="password" name="password" placeholder="Password"  formControlName="password" required="">
                     <input type="password" name="passwordConfirm" placeholder="Password Confirmation"  formControlName="passwordConfirm" required="">
-                    <span class="passWarning"  *ngIf="SignUpForm?.errors?.['mismatch']">Password must match</span>                 
+                    <span class="passWarning"  *ngIf="SignUpForm?.errors?.['mismatch']">As senhas devem ser iguais</span>                 
                     <button (click)="onSignUp()">Sign up</button>
                     
 				</form>
