--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -11,10 +11,10 @@
           <a mat-list-item routerLink="/patient-registration">
             <i class="material-icons">person_add</i>Cadastro de Pacientes
         </a>
-        <a mat-list-item routerLink="/appointment">
+        <a mat-list-item routerLink="/cadastro-consulta">
           <i class="material-icons">assignment_add</i>Cadastro Consultas
       </a>
-      <a mat-list-item routerLink="/exams">
+      <a mat-list-item routerLink="/cadastro-exame">
         <i class="material-icons">attach_file</i>Cadastro Exames
     </a>
           <a mat-list-item routerLink="/login">
@@ -23,7 +23,7 @@
       </mat-list>
   </mat-drawer>
 
-  <div class="sidenav-content" routerLink="/dashboard">
+  <div class="sidenav-content" >
       <button mat-icon-button (click)="drawer.toggle()">
           <mat-icon>more_vert</mat-icon>
       </button>
