Criação do component listagem  pacientes Filtro de busca pelo cards na lista Preparação para o routerlink de prontuario com detalhes

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -5,7 +5,7 @@
           <a mat-list-item routerLink="/dashboard">
               <i class="material-icons">dashboard</i>Dashboard
           </a>
-          <a mat-list-item routerLink="/handbooks">
+          <a mat-list-item routerLink="/listagem-pacientes">
               <i class="material-icons">person_search</i>Prontuários
           </a>
           <a mat-list-item routerLink="/patient-registration">
