criação do component prontuario template inicial com listagem para os dados do paciente, consulta e exames inicio do activate route para pegar pelo ID o usuário

--- a/src/app/listagem-pacientes/listagem-pacientes.component.html
+++ b/src/app/listagem-pacientes/listagem-pacientes.component.html
@@ -5,15 +5,22 @@
       <button (click)="filtraPct(nomePesquisa)">Pesquisar</button>
     </div>
 
-    <div class="card" *ngFor="let patient of listaPacientes" >
+    <li class="card" *ngFor="let patient of listaPacientes" (click)="onPacienteSelected(patient)"  >
+      
         <div>
+          
             <a>
             <i class="material-icons">person</i>
         
         </a>
           <p><span>{{ patient.fullName}}</span></p>
+          
+          <!-- <a [routerLink]="['/patient', 2]">Detalhes</a> -->
           <!-- <p  [routerLink]="['/patient', paciente.id]">Detalhes</p> -->
           
         </div>
-      </div>
+       
+      </li>
+      
+      <span *ngIf="listaPacientes == undefined">Não há pacientes cadastrados</span>
     <!-- <app-card *ngFor="let produto of listaProdutosFiltro" [item]="produto"></app-card> -->
