--- a/src/app/prontuario/prontuario.component.html
+++ b/src/app/prontuario/prontuario.component.html
@@ -1,29 +1,34 @@
 <div class="dadosPaciete">
-    <mat-list>
-        <mat-list-item>Item 1</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>Item 2</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>Item 3</mat-list-item>
-      </mat-list>
-    </div>
+  <mat-list>
+    <mat-list-item
+      ><div>
+        <p>Nome : {{ paciente?.[0].fullName }}</p>
+        <!-- <p>ID do Paciente: {{ paciente.id }}</p> -->
+      </div></mat-list-item
+    >
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 2</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 3</mat-list-item>
+  </mat-list>
+</div>
 
-    <div class="dadosConsulta">
- <mat-list>
-        <mat-list-item>Item 1</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>Item 2</mat-list-item>
-        <mat-divider></mat-divider>
-        <mat-list-item>Item 3</mat-list-item>
-      </mat-list>
-    </div>
+<div class="dadosConsulta">
+  <mat-list>
+    <mat-list-item>Item 1</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 2</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 3</mat-list-item>
+  </mat-list>
+</div>
 
-    <div class="dadosExame">
-        <mat-list>
-               <mat-list-item>Item 1</mat-list-item>
-               <mat-divider></mat-divider>
-               <mat-list-item>Item 2</mat-list-item>
-               <mat-divider></mat-divider>
-               <mat-list-item>Item 3</mat-list-item>
-             </mat-list>
-           </div>
+<div class="dadosExame">
+  <mat-list>
+    <mat-list-item>Item 1</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 2</mat-list-item>
+    <mat-divider></mat-divider>
+    <mat-list-item>Item 3</mat-list-item>
+  </mat-list>
+</div>
