Carregamento dos dados nome, convenio, alergia e cuidados ao clicar no prontuario do paciente.

--- a/src/app/listagem-pacientes/listagem-pacientes.component.css
+++ b/src/app/listagem-pacientes/listagem-pacientes.component.css
@@ -1,18 +1,19 @@
 .card {
-    border: 1px solid;
-    border-radius: 6px;
-    padding: 16px 8px;
-    width: 60%;
-    flex-direction: column;
-    text-align: center;
-      
-   
-  }
-  
-  img {
-    width: 115px;
-  }
-  
-  span {
-    margin-top: 16px;
-  }
+  border: 1px solid;
+  border-radius: 6px;
+  padding: 16px 8px;
+  width: 60%;
+  flex-direction: column;
+  text-align: center;
+}
+li {
+  list-style-type: none;
+}
+
+img {
+  width: 115px;
+}
+
+span {
+  margin-top: 16px;
+}
