Corrigido problema da side-bar e header problema do ngIf no login e cadastro adicionado o header Icone e nome do médico logado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
+<!-- <app-header></app-header> <app-side-bar *ngIf="showSidebar"> </app-side-bar
+><router-outlet> </router-outlet> -->
 
-        <app-side-bar >             
-        </app-side-bar>
-        <router-outlet ></router-outlet>
-      
-       
-  
-      
+<div class="container">
+  <app-side-bar *ngIf="showSidebar"></app-side-bar>
+  <div class="container-body">
+    <app-header *ngIf="showSidebar"></app-header>
+    <router-outlet></router-outlet>
+  </div>
+</div>
