--- a/src/app/side-bar/side-bar.component.css
+++ b/src/app/side-bar/side-bar.component.css
@@ -1,9 +1,7 @@
-  .body{
-    font-family: 'Jost', sans-serif;
-  }
-
-	
-.container {
-    height: 80%;
+.body {
+  font-family: "Jost", sans-serif;
 }
 
+.container {
+  height: 100%;
+}
