--- a/src/app/cadastro-consulta/cadastro-consulta.component.html
+++ b/src/app/cadastro-consulta/cadastro-consulta.component.html
@@ -1,12 +1,26 @@
-
-
 <div class="container">
   <div class="busca">
-    <label for="" >Busca paciente: </label>
-    <input type="text" >
-    <button>Pesquisar</button>
+    <label for="">Busca paciente: </label>
+    <input type="text" [(ngModel)]="nomePesquisa" />
+    <button (click)="filtraPct(nomePesquisa)">Pesquisar</button>
+  </div>
+  <div class="card">
+    <li [class.selected-card]="pacienteSelected && pacienteSelected.id === patient.id"
+    class="card"
+    class="card"
+    *ngFor="let patient of listaPacientes"
+    (click)="onPacienteSelected(patient)">
+    <div>
+      <a>
+        <i class="material-icons">person</i>
+      </a>
+      <p>
+        <span>{{ patient.fullName }}</span>
+      </p>
+    </div>
+  </li>
 
-</div>
+  </div>
 
 <div class="formulario">
     <form [formGroup]="ConsultaForm" (ngSubmit)="onSubmit()">
