--- a/src/app/listagem-pacientes/listagem-pacientes.component.html
+++ b/src/app/listagem-pacientes/listagem-pacientes.component.html
@@ -15,7 +15,7 @@
         <i class="material-icons">person</i>
       </a>
       <p>
-        <span>{{ patient.fullName }}</span>
+        <span>{{ patient?.fullName }}</span>
       </p>
 
       <!-- <a [routerLink]="['/patient', 2]">Detalhes</a> -->
