INclusao da mascara para telefone

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,8 +1,28 @@
-h1 {
-    border-style: double;
-    border-radius: 5px;
-    border-color: blue;
-    color: rgb(255, 30, 0);
-    
-}
 
+
+.stats {
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    text-align: center;
+    justify-content: center;
+
+}
+span{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+p{
+    border-style: double;
+    max-width: 25%;
+    padding: 50px;
+    text-align: center;
+    margin: 10px;
+}
+.busPct{
+    text-align: center;
+}
+li{
+    list-style-type: none;
+}
