Criado path com id para cadastro paciente a partir do dashboard

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -20,7 +20,7 @@
 </div>
 <div class="card">
     <li  *ngFor="let patient of listaPctObj"
-    (click)="verDetalhes()">
+    (click)="onPacienteSelected(patient)">
     <div>
      <p>
         <a>
