--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,4 +1,10 @@
-
+.card{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 25px;
+  
+}
 
 .stats {
     display: flex;
