--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,54 +1,37 @@
 <div class="stats">
-<p>
-    <label for="">Pacientes: {{qtdPacientes}}</label>
-</p>
-<p>
-    <label for="">Consultas: {{qtdExames}}</label>
-</p>
-<p>
-    <label for="">Exames: {{qtdConsultas}}</label>
-</p>
-
+  <p>
+    <label for="">Pacientes: {{ qtdPacientes }}</label>
+  </p>
+  <p>
+    <label for="">Consultas: {{ qtdConsultas }}</label>
+  </p>
+  <p>
+    <label for="">Exames: {{ qtdExames }}</label>
+  </p>
 </div>
 <div class="busPct">
-    <div class="busca">
-        <label for="">Busca paciente: </label>
-        <input type="text" [(ngModel)]="nomePesquisa" />
-        <button (click)="filtraPct(nomePesquisa)">Pesquisar</button>
-      </div>
-
+  <div class="busca">
+    <label for="">Busca paciente: </label>
+    <input type="text" [(ngModel)]="nomePesquisa" />
+    <button (click)="filtraPct(nomePesquisa)">Pesquisar</button>
+  </div>
 </div>
 <div class="card">
-    <li  *ngFor="let patient of listaPctObj"
-    (click)="onPacienteSelected(patient)">
+  <li *ngFor="let patient of listaPctObj" (click)="onPacienteSelected(patient)">
     <div>
-     <p>
+      <p>
         <a>
-            <i class="material-icons">person</i>
-          </a>
-          
-            <span>{{ patient.fullName }}</span>
-            <span>{{ patient.email }}</span>
-            <span >{{patient.phone | mask: '(00)0 0000-0000'}}</span>
-            <span>{{ patient.NomeConvenio }}</span>
-            <span>{{ patient.birth | age }}</span>
+          <i class="material-icons">person</i>
+        </a>
 
-            <button (click)="deatlhes()">Detalhes</button>
-       
-            
-     </p>
-       
-      
+        <span>{{ patient.fullName }}</span>
+        <span>{{ patient.email }}</span>
+        <span>{{ patient.phone | mask : "(00)0 0000-0000" }}</span>
+        <span>{{ patient.NomeConvenio }}</span>
+        <span>{{ patient.birth | age }}</span>
+
+        <button (click)="deatlhes()">Detalhes</button>
+      </p>
     </div>
   </li>
-
-  </div>
-   
-
-   
-
-
-
-
-
-
+</div>
